--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title:            Hyde
 tagline:          'A Jekyll theme'
 description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:              https://tetherless-world.github.io/explanations-ontology/
-baseurl:          /
+baseurl:          https://tetherless-world.github.io/explanations-ontology/
 
 author:
   name:           'Mark Otto'
