--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:        pretty
 
 # Setup
 url:              https://tetherless-world.github.io/
-baseurl:         /explanations-ontology
+baseurl:          https://tetherless-world.github.io/explanations-ontology/
 
 author:
   name:           'Mark Otto'
