--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+title: Explanations Ontology: Treating Explanations as a Primary Consideration
+
 # Dependencies
 markdown:         redcarpet
 highlighter:      pygments
