--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Explanations Ontology: Treating Explanations as a Primary Consideration
+title: Explanations Ontology - Treating Explanations as a Primary Consideration
 
 # Dependencies
 markdown:         redcarpet
