--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Explanations Ontology - Treating Explanations as a Primary Consideration
+title: Explanations Ontology: Modeling Explainability in User-Centered AI System Design
 
 # Dependencies
 markdown:         redcarpet
