--- a/WidocoDocumentation/.htaccess
+++ b/WidocoDocumentation/.htaccess
@@ -7,11 +7,11 @@ AddType application/rdf+xml .rdf
 AddType application/rdf+xml .owl
 AddType text/turtle .ttl
 AddType application/n-triples .n3
-AddType application/ld+json .json
+AddType application/ld+json .jsonld
 # Rewrite engine setup
 RewriteEngine On
 #Change the path to the folder here
-RewriteBase /WidocoDocumentation 
+RewriteBase /EODocumentation 
 
 # Rewrite rule to serve HTML content from the vocabulary URI if requested
 RewriteCond %{HTTP_ACCEPT} !application/rdf\+xml.*(text/html|application/xhtml\+xml)
@@ -22,12 +22,12 @@ RewriteRule ^$ index-en.html [R=303,L]
 
 # Rewrite rule to serve JSON-LD content from the vocabulary URI if requested
 RewriteCond %{HTTP_ACCEPT} application/ld\+json
-RewriteRule ^$ ontology.json [R=303,L]
+RewriteRule ^$ ontology.jsonld [R=303,L]
 
 # Rewrite rule to serve RDF/XML content from the vocabulary URI if requested
 RewriteCond %{HTTP_ACCEPT} \*/\* [OR]
 RewriteCond %{HTTP_ACCEPT} application/rdf\+xml
-RewriteRule ^$ ontology.xml [R=303,L]
+RewriteRule ^$ ontology.rdf [R=303,L]
 
 # Rewrite rule to serve N-Triples content from the vocabulary URI if requested
 RewriteCond %{HTTP_ACCEPT} application/n-triples
@@ -44,4 +44,4 @@ RewriteRule ^$ 406.html [R=406,L]
 # Default response
 # ---------------------------
 # Rewrite rule to serve the RDF/XML content from the vocabulary URI by default
-RewriteRule ^$ ontology.xml [R=303,L]
+RewriteRule ^$ ontology.rdf [R=303,L]
