--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Explanations Ontology - Modeling Explainability in User-Centered AI System Design
+title: Explanation Ontology - Modeling Explainability in User-Centered AI System Design
 
 # Dependencies
 markdown:         redcarpet
